// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries metricFindQuery returns default identifier with id as value when return type is AssetId and asset name is not present 1`] = `
[
  {
    "text": "01FE20D1",
    "value": "7f6d0d74-bc75-4d78-9edd-00c253b3a0de",
  },
  {
    "text": "2222",
    "value": "7f6d0d74-bc75-4d78-9edd-00c253b3a0de",
  },
]
`;

exports[`queries metricFindQuery returns default identifiers when asset name is not present 1`] = `
[
  {
    "text": "01FE20D1",
    "value": "Assets.National Instruments.sbRIO-9629.01FE20D1",
  },
  {
    "text": "2222",
    "value": "Assets.3333.1111.2222",
  },
]
`;

exports[`queries metricFindQuery returns name/alias when asset name field is present 1`] = `
[
  {
    "text": "NI-sbRIO-9629-01FE20D1 (01FE20D1)",
    "value": "Assets.National Instruments.sbRIO-9629.01FE20D1",
  },
  {
    "text": "Conn0_AI (01FE20D1)",
    "value": "Assets.National Instruments.AI 0-15.01FE20D1",
  },
  {
    "text": "Conn0_AO (01FE20D1)",
    "value": "Assets.National Instruments.AO 0-3.01FE20D1",
  },
  {
    "text": "Conn0_DIO0-3 (01FE20D1)",
    "value": "Assets.National Instruments.DIO 0-3.01FE20D1",
  },
]
`;

exports[`queries metricFindQuery returns name/alias with id as value when return type is AssetId 1`] = `
[
  {
    "text": "NI-sbRIO-9629-01FE20D1 (01FE20D1)",
    "value": "7f6d0d74-bc75-4d78-9edd-00c253b3a0de",
  },
  {
    "text": "Conn0_AI (01FE20D1)",
    "value": "71fbef61-fae6-4364-82d4-29feb79c7146",
  },
  {
    "text": "Conn0_AO (01FE20D1)",
    "value": "cf1ac843-06a2-4713-ab43-f9d1d8dfdc32",
  },
  {
    "text": "Conn0_DIO0-3 (01FE20D1)",
    "value": "456e8812-1da4-4818-afab-f0cd34f74567",
  },
]
`;

exports[`queries metricFindQuery should return expected data when take is 10000 1`] = `
[
  {
    "text": "01FE20D1",
    "value": "Assets.National Instruments.sbRIO-9629.01FE20D1",
  },
  {
    "text": "2222",
    "value": "Assets.3333.1111.2222",
  },
]
`;

exports[`queries run metadata query 1`] = `
[
  {
    "fields": [
      {
        "name": "id",
        "values": [
          "7f6d0d74-bc75-4d78-9edd-00c253b3a0de",
          "71fbef61-fae6-4364-82d4-29feb79c7146",
          "cf1ac843-06a2-4713-ab43-f9d1d8dfdc32",
          "456e8812-1da4-4818-afab-f0cd34f74567",
        ],
      },
      {
        "name": "name",
        "values": [
          "NI-sbRIO-9629-01FE20D1",
          "Conn0_AI",
          "Conn0_AO",
          "Conn0_DIO0-3",
        ],
      },
      {
        "name": "vendor name",
        "values": [
          "National Instruments",
          "National Instruments",
          "National Instruments",
          "National Instruments",
        ],
      },
      {
        "name": "vendor number",
        "values": [
          0,
          4243,
          4243,
          4243,
        ],
      },
      {
        "name": "model name",
        "values": [
          "sbRIO-9629",
          "AI 0-15",
          "AO 0-3",
          "DIO 0-3",
        ],
      },
      {
        "name": "model number",
        "values": [
          31299,
          31303,
          31304,
          31305,
        ],
      },
      {
        "name": "serial number",
        "values": [
          "01FE20D1",
          "01FE20D1",
          "01FE20D1",
          "01FE20D1",
        ],
      },
      {
        "name": "bus type",
        "values": [
          "BUILT_IN_SYSTEM",
          "CRIO",
          "CRIO",
          "CRIO",
        ],
      },
      {
        "name": "asset type",
        "values": [
          "SYSTEM",
          "GENERIC",
          "GENERIC",
          "GENERIC",
        ],
      },
      {
        "name": "is NI asset",
        "values": [
          true,
          true,
          true,
          true,
        ],
      },
      {
        "name": "part number",
        "values": [
          "1",
          "2",
          "3",
          "",
        ],
      },
      {
        "name": "calibration status",
        "values": [
          "OK",
          "OK",
          "OK",
          "OK",
        ],
      },
      {
        "name": "is system controller",
        "values": [
          true,
          false,
          false,
          false,
        ],
      },
      {
        "name": "last updated timestamp",
        "values": [
          "2024-02-21T12:54:20.069Z",
          "2024-02-21T12:54:20.072Z",
          "2024-02-21T12:54:20.076Z",
          "2024-02-21T12:54:20.078Z",
        ],
      },
      {
        "name": "location",
        "values": [
          "",
          "",
          "",
          "Cabinet 1",
        ],
      },
      {
        "name": "minionId",
        "values": [
          "NI_sbRIO-9629--SN-01FE20D1--MAC-00-80-2F-33-30-18",
          "NI_sbRIO-9629--SN-01FE20D1--MAC-00-80-2F-33-30-18",
          "NI_sbRIO-9629--SN-01FE20D1--MAC-00-80-2F-33-30-18",
          "NI_sbRIO-9629--SN-01FE20D1--MAC-00-80-2F-33-30-18",
        ],
      },
      {
        "name": "parent name",
        "values": [
          "",
          "sbRIO1",
          "sbRIO1",
          "sbRIO1",
        ],
      },
      {
        "name": "workspace",
        "values": [
          "e73fcd94-649b-4d0a-b164-bf647a5d0946",
          "e73fcd94-649b-4d0a-b164-bf647a5d0946",
          "e73fcd94-649b-4d0a-b164-bf647a5d0946",
          "e73fcd94-649b-4d0a-b164-bf647a5d0946",
        ],
      },
      {
        "name": "supports self calibration",
        "values": [
          true,
          false,
          false,
          false,
        ],
      },
      {
        "name": "supports external calibration",
        "values": [
          false,
          true,
          true,
          false,
        ],
      },
      {
        "name": "visa resource name",
        "values": [
          "",
          "PXI::203.0::INSTR",
          "",
          "",
        ],
      },
      {
        "name": "firmware version",
        "values": [
          "8.8.0f0",
          "",
          "",
          "",
        ],
      },
      {
        "name": "discovery type",
        "values": [
          "AUTOMATIC",
          "AUTOMATIC",
          "AUTOMATIC",
          "AUTOMATIC",
        ],
      },
      {
        "name": "supports self test",
        "values": [
          false,
          false,
          false,
          true,
        ],
      },
      {
        "name": "supports reset",
        "values": [
          false,
          false,
          false,
          true,
        ],
      },
      {
        "name": "properties",
        "values": [
          "{"Property1":"Test1","Property2":"Test2"}",
          "{}",
          "{}",
          "{}",
        ],
      },
      {
        "name": "keywords",
        "values": [
          "TestKeyword1, TestKeyword2",
          "Kw1, Kw2",
          "",
          "",
        ],
      },
      {
        "name": "self calibration",
        "values": [
          "2024-02-21T12:54:20.069Z",
          "",
          "",
          "",
        ],
      },
      {
        "name": "calibration due date",
        "values": [
          undefined,
          undefined,
          undefined,
          "2025-02-21T12:54:20.078Z",
        ],
      },
    ],
    "refId": "A",
  },
]
`;
